tests/e2e/arg_name_shorthand_error6.story
function test arg:int
	return

arg = 0
test(2 + arg:arg)
